Stop menu collapsing on mobile

--- a/www/stylesheet.css
+++ b/www/stylesheet.css
@@ -2,6 +2,10 @@
   font-size: 10px;
 }
 
+.navbar-nav>li {
+    float: left;
+}
+
 div.outer {
   position: fixed;
   top: 41px;
